# Data-Science-Term-Project

./: .gitignore  Phase 4-Team Planning.xlsx  Phase_4-Team_Planning.xlsx  README.md  YearlyLandCost.csv  firedata_preprocess.ipynb  firedata_station.csv
Data Staging/: Data Science Project Phase 2 Physical Design and Data Staging.docx  High Level Staging.drawio.xml  Phase 2-Team Planning_W23 (WIP).xlsx
OLAP-Dashboard/: Phase 3-Team Planning.xlsx  README.md  dashboard.py  olap.ipynb
Project Planning/: Project Plan.xlsx
data/: firedata_no_station.csv  firedata_station.csv  firedata_station_with_climate_id.csv  relevant_weather_data.csv  station_inventory.csv  station_lookup.csv  weather.csv
data/weather/: 1012040.csv  1012055.csv  1012710.csv  1014820.csv  1015105.csv  1015628.csv  1015630.csv  1016335.csv  1016640.csv  1016940.csv  1016RM0.csv  1017230.csv  1017254.csv  1018621.csv  1018633.csv  1020590.csv  1021261.csv  1021270.csv  1021330.csv  1021480.csv  1021500.csv  1021830.csv  1021960.csv  1021988.csv  1021989.csv  1022795.csv  1023462.csv  1024638.csv  10253G0.csv  1026562.csv  1026565.csv  1026639.csv  1027403.csv  1030230.csv  1031402.csv  1035612.csv  1036208.csv  1036B06.csv  104091B.csv  1043152.csv  (+1084 more)
data/weather_station_ids/: 1012040.csv  1012055.csv  1012710.csv  1014820.csv  1015630.csv  (+1073 more)
farmland/: land_cost.csv
src/: .env  compose.yml  download.py  firedata_preprocess.py  injest.py  land_cost_preprocess.py  main.py  requirements.txt  stageData.py
src/nearest-station/: Cargo.toml
src/nearest-station/src/: main.rs  postprocessing.rs
(+18 files in other folders)
